--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -20,6 +20,6 @@
 
     <%= render "shared/nav", location: 'bottom' %>
 
-    <%= source_helper("blogs") %>
+    <%= source_helper("blog") %>
   </body>
 </html>
