--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About me</h1>
+<p>My name is Benjamin Cannon I am the CEO of nothing, I am the youngest of 9 siblings </p>
