finfish Inital styling of devise pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -164,7 +164,7 @@ body {
 /*
  * Custom Styles
  */
- 
+
 .card-block {
   color: black;
   text-align: left;
@@ -173,3 +173,27 @@ body {
 .auth-links a {
   color: black;
 }
+
+.register-text {
+  text-align: right;
+}
+
+
+.login > .card {
+  width: 22rem;
+  margin: 0 auto;
+  float: none;
+  margin-bottom: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
