--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="inner cover">
-  <h1 class="cover-heading">Cover your page.</h1>
+  <h1 class="cover-heading">Welcome to the home page.</h1>
   <p class="lead">*insert great cover content that I can totally think of*</p>
   <p class="lead">
     <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
