--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -3,16 +3,12 @@
     <div class="row">
       <div class="col-sm-8 py-4">
         <h4 class="text-white">About</h4>
-        <p class="text-muted">I am the only akward introvert of my entire family of 9 siblings.  I am great with computers, execpt the programming part, at leat for now.</p>
+        <p class="text-muted">I am the only akward introvert of my entire family of 9 siblings.  I am great with computers, execpt the programming part, at least for now.</p>
       </div>
       <div class="col-sm-4 py-4">
         <h4 class="text-white">Explore</h4>
         <ul class="list-unstyled">
-          <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "About Me", about_me_path %></li>
-          <li><%= link_to "Contact", contact_path %></li>
-          <li><%= link_to "Blog", blogs_path %></li>
-          <li><%= link_to "Portfolio", portfolios_path %></li>
+            <%= nav_helper 'text-white', 'li' %>
           <li><%= login_helper'text-white' %></li>
         </ul>
       </div>
