Integrated image background for app layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,8 +29,8 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
 }
+
 body {
   color: #fff;
   text-align: center;
@@ -178,12 +178,10 @@ body {
   text-align: right;
 }
 
-
 .login > .card {
   width: 22rem;
   margin: 0 auto;
   float: none;
-  margin-bottom: 10px;
 }
 
 .app-nav span {
@@ -191,12 +189,21 @@ body {
   margin-right: 15px;
 }
 
+#background {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  background: image-url('Frisk.png') no-repeat;
+  background-size: cover;
+}
 
-
-
-
-
-
-
-
-
+.app-footer {
+  color: white;
+}
