--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,16 @@
       <div class="site-wrapper-inner">
         <div class="cover-container">
 
+          <div id="background"></div>
+
           <%= render "shared/application_nav" %>
 
           <%= yield %>
-          
+
           <%= render "shared/application_footer" %>
 
           <%= source_helper("application") %>
-          
+
         </div>
       </div>
     </div>
