Implemented initial file uploading system via carrierwave for portfolio items

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
               autoplay: true,
               loop: true,
               muted: true,
-              poster: 'Frisk.png'
+              poster: 'Frisk.jpg'
             )
             %>
           
