Updated file upload forms and refactored placeholder functionality into view

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-md-4">
-    <%= image_tag "Do_you_wanna_have_a_bad_time.png", width: 300, alt: "profile image" %>
+    <%= image_tag "Do_you_wanna_have_a_bad_time.jpg", width: 300, alt: "profile image" %>
   </div>
     
   <div class="col-md-8">
