--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,14 +1,19 @@
-<h1>About me</h1>
-
-<hr>
-
-<div class="row">
-  <div class="col-md-4">
-    <%= image_tag "Do_you_wanna_have_a_bad_time.jpg", width: 300, alt: "profile image" %>
-  </div>
+<div class="app-card-container">
+  <div class="card">
+    <h1>About me</h1>
     
-  <div class="col-md-8">
-    <p>My name is Benjamin Cannon I am the CEO of nothing, I am the youngest of 9 siblings </p>
+    <hr>
+    
+    <div class="row">
+      <div class="col-md-4">
+        <%= image_tag "Do_you_wanna_have_a_bad_time.jpg", width: 300, alt: "profile image", class: 'profile-img' %>
+      </div>
+        
+      <div class="col-md-8">
+        <p>My name is Benjamin Cannon I am the CEO of nothing, I am the youngest of 9 siblings </p>
+      </div>
+    </div>
   </div>
 </div>
+
 
