--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,23 +1,27 @@
-<h1>Would you like to work together?</h1>
-
-<hr>
-
-<div class="row">
-  <div class="col-md-6">
-    <h3>Office Address</h3>
-
-    <p>955 W 12th St, Ogden, UT 84404</p>
-
-    <h3>Phone</h3>
-
-    <p><%= number_to_phone "8016483198" %></p>
-
-    <h3>Email</h3>
-
-    <p><a href="mailto:cabcannon2000@gmail.com?subject=PortfolioContact" "email me">Email me</a> </p>
-  </div>
-
-  <div class="col-md-6">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2999.9844799310904!2d-112.00443258457865!3d41.243895979277646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87530e7dbacaeb29%3A0x21b442ee3adde242!2sTwo+Rivers+High+School!5e0!3m2!1sen!2sus!4v1500301153187" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+<div class="app-card-container">
+  <div class="card">
+    <h1>Would you like to work together?</h1>
+    
+    <hr>
+    
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Office Address</h3>
+    
+        <p>955 W 12th St, Ogden, UT 84404</p>
+    
+        <h3>Phone</h3>
+    
+        <p><%= number_to_phone "8016483198" %></p>
+    
+        <h3>Email</h3>
+    
+        <p><a href="mailto:cabcannon2000@gmail.com?subject=PortfolioContact" "email me">Email me</a> </p>
+      </div>
+    
+      <div class="col-md-6">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2999.9844799310904!2d-112.00443258457865!3d41.243895979277646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87530e7dbacaeb29%3A0x21b442ee3adde242!2sTwo+Rivers+High+School!5e0!3m2!1sen!2sus!4v1500301153187" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
   </div>
 </div>
